sarah bio and headshot added

--- a/pages/boardMembers.html
+++ b/pages/boardMembers.html
@@ -95,12 +95,12 @@
             <div class="col-md-5">
                 <p class="position">Vice President</p>
                 <p class="bio">
-                    Tania Mishra is a current Senior in high school and the creator of DTech. Tania has been interested in technology and computer science since her first digital exploration class in 6th grade. She completed two levels of Girls Who Code and participated in multiple workshops focused on empowering and inspiring girls in technology. She has participated and won awards in ProjectCSGirls and Intel ISEF-affiliated science and engineering fairs. She is currently interning at Northwestern Mutual on Jay Walters' team. Tania wants to help lead more girls into the path of computer science. She has received a lot of guidance from teachers mentors at NM, and she wishes to pass it on to younger girls so that they can take advantage of every opportunity and continue to explore technology fields.
+                    Sarah Rubenstein is a senior at Brookfield Central who is planning to major in Computer Science next year at UW Madison. She learned to love code during her four years of Girls Who Code at Marquette. For the past two years, she's been a Software Lead on her FRC robotics team. She was also an IT intern at Northwestern Mutual for around two years and will be an intern at Concurrency during the summer of 2022. Sarah enjoys teaching code to other girls so that they can create amazing projects. 
                 </p>
                 <a href="https://www.linkedin.com/in/sarah-rubenstein-b042471b1/" target="_blank" class="link">Connect with Sarah on LinkedIn</a>
             </div>
             <div class="col-md-3">
-                <img src="../images/logo.png" class="profile-pic">
+                <img src="../images/sarahProfilePic.png" class="profile-pic">
             </div>
         </div>
         <div class="row main-bg">
