--- a/pages/volunteers.html
+++ b/pages/volunteers.html
@@ -67,25 +67,43 @@
         <div class="row main-bg">
             <div class="col-md-2"></div>
             <div class="col-md-8">
-                <p id="sub-title">Meet some of DTech's volunteers and others who have helped DTech!</p>
+                <p id="sub-title">Meet some of DTech's volunteers!</p>
             </div>
         </div>
         <div class="row main-bg">
             <div class="col-md-3"></div>
             <div class="col-md-2">
                 <img src="../images/taniaProfilePic.JPG" class="picture">
-                <p class="name">Elizabeth Taylor</p>
-                <p class="subheading">MSOE Outreach Coordinator</p>
+                <p class="name">Monica Price</p>
             </div>
             <div class="col-md-2">
                 <img src="../images/taniaProfilePic.JPG" class="picture">
                 <p class="name">Harshman Sihra</p>
-                <p class="subheading">Volunteer</p>
+            </div>
+            <div class="col-md-2">
+                <img src="../images/avaProfilePic.png" class="picture">
+                <p class="name">Ava Jorgensen</p>
+            </div>
+        </div>
+        <div class="row main-bg">
+            <div class="col-md-3"></div>
+            <div class="col-md-2">
+                <img src="../images/taniaProfilePic.JPG" class="picture">
+                <p class="name">Bao Xiong</p>
+            </div>
+            <!-- <div class="col-md-2">
+                <img src="../images/taniaProfilePic.JPG" class="picture">
+                <p class="name">Harshman Sihra</p>
             </div>
             <div class="col-md-2">
                 <img src="../images/taniaProfilePic.JPG" class="picture">
-                <p class="name">Harshman Sihra</p>
-                <p class="subheading">Volunteer</p>
+                <p class="name">Ava Jorgensen</p>
+            </div> -->
+        </div>
+        <div class="row main-bg">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+                <p id="special-thanks">Special thanks to Elizabeth Taylor, MSOE's Outreach Coordinator!</p>
             </div>
         </div>
         
