contact form styles

--- a/pages/contactUs.html
+++ b/pages/contactUs.html
@@ -69,7 +69,7 @@
             <div class="col-md-8">
                 <p class="subheading">Contact Us</p>
                 <p class="info">Please fill out the form below to contact us for more information on DTech, our programs, or anything else!</p>
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe2LGkICxgypgIZey9QchL61PFd9nmC19wFeN0f9G57LEFGTA/viewform?embedded=true" width="640" height="382" frameborder="0" marginheight="0" marginwidth="0" id="contact-form">Loading…</iframe>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe2LGkICxgypgIZey9QchL61PFd9nmC19wFeN0f9G57LEFGTA/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0" id="contact-form">Loading…</iframe>
             </div>
         </div>
         
