--- a/pages/volunteers.html
+++ b/pages/volunteers.html
@@ -73,32 +73,32 @@
         <div class="row main-bg">
             <div class="col-md-3"></div>
             <div class="col-md-2">
-                <img src="../images/taniaProfilePic.JPG" class="picture">
+                <img src="../images/profilePics/tania.JPG" class="picture">
                 <p class="name">Monica Price</p>
             </div>
             <div class="col-md-2">
-                <img src="../images/taniaProfilePic.JPG" class="picture">
+                <img src="../images/profilePics/tania.JPG" class="picture">
                 <p class="name">Harshman Sihra</p>
             </div>
             <div class="col-md-2">
-                <img src="../images/avaProfilePic.png" class="picture">
+                <img src="../images/profilePics/ava.png" class="picture">
                 <p class="name">Ava Jorgensen</p>
             </div>
         </div>
         <div class="row main-bg">
             <div class="col-md-3"></div>
             <div class="col-md-2">
-                <img src="../images/taniaProfilePic.JPG" class="picture">
+                <img src="../images/profilePics/bao.png" class="picture">
                 <p class="name">Bao Xiong</p>
             </div>
-            <!-- <div class="col-md-2">
-                <img src="../images/taniaProfilePic.JPG" class="picture">
-                <p class="name">Harshman Sihra</p>
+            <div class="col-md-2">
+                <!-- <img src="../images/profilePics/tania.JPG" class="picture">
+                <p class="name">Harshman Sihra</p> -->
             </div>
             <div class="col-md-2">
-                <img src="../images/taniaProfilePic.JPG" class="picture">
-                <p class="name">Ava Jorgensen</p>
-            </div> -->
+                <!-- <img src="../images/profilePics/tania.JPG" class="picture">
+                <p class="name">Ava Jorgensen</p> -->
+            </div>
         </div>
         <div class="row main-bg">
             <div class="col-md-2"></div>
