--- a/pages/boardMembers.html
+++ b/pages/boardMembers.html
@@ -80,7 +80,7 @@
                 <a href="https://www.linkedin.com/in/taniamishra127/" target="_blank" class="link">Connect with Tania on LinkedIn</a>
             </div>
             <div class="col-md-3">
-                <img src="../images/taniaProfilePic.JPG" class="profile-pic">
+                <img src="../images/profilePics/tania.JPG" class="profile-pic">
 
             </div>
         </div>
@@ -100,7 +100,7 @@
                 <a href="https://www.linkedin.com/in/sarah-rubenstein-b042471b1/" target="_blank" class="link">Connect with Sarah on LinkedIn</a>
             </div>
             <div class="col-md-3">
-                <img src="../images/sarahProfilePic.png" class="profile-pic">
+                <img src="../images/profilePics/sarah.png" class="profile-pic">
             </div>
         </div>
         <div class="row main-bg">
@@ -119,7 +119,7 @@
                 <a href="https://www.linkedin.com/in/sanjanatarigoppula/" target="_blank" class="link">Connect with Sanjana on LinkedIn</a>
             </div>
             <div class="col-md-3">
-                <img src="../images/sanjanaProfilePic.jpg" class="profile-pic">
+                <img src="../images/profilePics/sanjana.jpg" class="profile-pic">
             </div>
         </div>
         <div class="row main-bg">
