--- a/pages/volunteers.html
+++ b/pages/volunteers.html
@@ -73,27 +73,27 @@
         <div class="row main-bg">
             <div class="col-md-3"></div>
             <div class="col-md-2">
-                <img src="../images/profilePics/tania.JPG" class="picture">
-                <p class="name">Monica Price</p>
-            </div>
-            <div class="col-md-2">
-                <img src="../images/profilePics/tania.JPG" class="picture">
+                <img src="../images/profilePics/harshman.png" class="picture">
                 <p class="name">Harshman Sihra</p>
             </div>
             <div class="col-md-2">
                 <img src="../images/profilePics/ava.png" class="picture">
                 <p class="name">Ava Jorgensen</p>
             </div>
-        </div>
-        <div class="row main-bg">
-            <div class="col-md-3"></div>
             <div class="col-md-2">
                 <img src="../images/profilePics/bao.png" class="picture">
                 <p class="name">Bao Xiong</p>
             </div>
+        </div>
+        <div class="row main-bg">
+            <div class="col-md-3"></div>
             <div class="col-md-2">
                 <!-- <img src="../images/profilePics/tania.JPG" class="picture">
                 <p class="name">Harshman Sihra</p> -->
+            </div>
+            <div class="col-md-2">
+                <img src="../images/profilePics/tania.JPG" class="picture">
+                <p class="name">Monica Price</p>
             </div>
             <div class="col-md-2">
                 <!-- <img src="../images/profilePics/tania.JPG" class="picture">
