mission and vision updated

--- a/pages/mission.html
+++ b/pages/mission.html
@@ -76,7 +76,7 @@
                 <p class="motto">From this stem, a flower blooms</p>
                 <p class="motto-subheading">- DTech Official Motto</p>
                 <p class="about-description">
-                    Divas in Technology (DTech) is a platform created by Tania Mishra to expand the outreach of computer science to younger girls. The goal of this platform is to host multiple computer science workshops and programs for girls of all ages, ethnicities, and backgrounds. Our mission is to help inspire girls to close the gender gap in technology-related career fields. We want to help younger girls gain resources early on by hosting workshops led by high school and college students who are intending to pursue a career in a technology field. Networking opportunities will also be included through guest speakers who are currently in the workforce.
+                    Divas in Technology (DTech) is a 501(c)(3) nonprofit organization working to expand the outreach of computer science to younger girls. By hosting programs that teach various computer science skills, we hope to increase interest in tech-related fields and increase enrollment in computer science courses in school. DTech is run by high school and college students in Wisconsin who are passionate about helping girls get access to tech opportunities and mentorship early on. Divas in Technology is focused on empowering girls in technology and changing the future.
                 </p>
             </div>
             <div class="col-md-3">
@@ -88,13 +88,13 @@
             <div class="col-md-4">
                 <p class="about-title">Our Mission</p>
                 <p class="about-description">
-                    Divas in Technology (DTech) is a platform created by Tania Mishra to expand the outreach of computer science to younger girls. The goal of this platform is to host multiple computer science workshops and programs for girls of all ages, ethnicities, and backgrounds. Our mission is to help inspire girls to close the gender gap in technology-related career fields. We want to help younger girls gain resources early on by hosting workshops led by high school and college students who are intending to pursue a career in a technology field. Networking opportunities will also be included through guest speakers who are currently in the workforce.
+                    DTech hosts tech-related workshops, programs, and networking opportunities for girls of all ages, ethnicities, and backgrounds.
                 </p>
             </div>
             <div class="col-md-4">
                 <p class="about-title">Our Vision</p>
                 <p class="about-description">
-                    Divas in Technology (DTech) is a platform created by Tania Mishra to expand the outreach of computer science to younger girls. The goal of this platform is to host multiple computer science workshops and programs for girls of all ages, ethnicities, and backgrounds. Our mission is to help inspire girls to close the gender gap in technology-related career fields. We want to help younger girls gain resources early on by hosting workshops led by high school and college students who are intending to pursue a career in a technology field. Networking opportunities will also be included through guest speakers who are currently in the workforce.
+                    With females making up only 23% of computer science students in Wisconsin, DTech aims to increase that number to 50% by providing resources, mentorship, and a community to young girls interested in the tech field.
                 </p>
             </div>
         </div>
