working on dropdown

--- a/pages/upcomingPrograms.html
+++ b/pages/upcomingPrograms.html
@@ -73,8 +73,14 @@
         <div class="row main-bg">
             <div class="col-md-2"></div>
             <div class="col-md-8 program-dropdown" id="program1">
-                <p class="dropdown-title">Intro to Coding, Python</p>
-                <!-- Add dropdown arrow here -->
+                <div class="row">
+                    <div class="col-md-11">
+                        <p class="dropdown-title">Intro to Coding, Python</p>
+                    </div>
+                    <div class="col-md-1">
+                        <img src="../images/downArrowOrange.png" id="down-arrow1">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row main-bg" id="program1-info">
