upcoming programs dropdown finalized

--- a/pages/upcomingPrograms.html
+++ b/pages/upcomingPrograms.html
@@ -78,7 +78,7 @@
                         <p class="dropdown-title">Intro to Coding, Python</p>
                     </div>
                     <div class="col-md-1">
-                        <img src="../images/downArrowOrange.png" id="down-arrow1">
+                        <img src="../images/downArrowWhite.png" id="arrow1">
                     </div>
                 </div>
             </div>
@@ -105,8 +105,14 @@
         <div class="row main-bg">
             <div class="col-md-2"></div>
             <div class="col-md-8 program-dropdown" id="program2">
-                <p class="dropdown-title">Intro to Coding, Python</p>
-                <!-- Add dropdown arrow here -->
+                <div class="row">
+                    <div class="col-md-11">
+                        <p class="dropdown-title">Intro to Coding, Python</p>
+                    </div>
+                    <div class="col-md-1">
+                        <img src="../images/downArrowWhite.png" id="arrow2">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row main-bg" id="program2-info">
@@ -131,8 +137,14 @@
         <div class="row main-bg">
             <div class="col-md-2"></div>
             <div class="col-md-8 program-dropdown" id="program3">
-                <p class="dropdown-title">Intro to Coding, Python</p>
-                <!-- Add dropdown arrow here -->
+                <div class="row">
+                    <div class="col-md-11">
+                        <p class="dropdown-title">Intro to Coding, Python</p>
+                    </div>
+                    <div class="col-md-1">
+                        <img src="../images/downArrowWhite.png" id="arrow3">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row main-bg" id="program3-info">
