--- a/pages/pastPrograms.html
+++ b/pages/pastPrograms.html
@@ -86,7 +86,7 @@
         <div class="row main-bg">
             <div class="col-md-2"></div>
             <div class="col-md-4 ceremony-bg">
-                <img src="../images/summer2021.png" class="group-pic">
+                <img src="../images/fall2020.png" class="group-pic">
                 <a href="https://youtu.be/LjZmXUKcI8c" target="_blank" class="link">
                     <button class="ceremony-link">
                         View Final Ceremony
