--- a/pages/upcomingPrograms.html
+++ b/pages/upcomingPrograms.html
@@ -107,7 +107,7 @@
             <div class="col-md-8 program-dropdown" id="program2">
                 <div class="row">
                     <div class="col-md-11">
-                        <p class="dropdown-title">Intro to Coding, Python</p>
+                        <p class="dropdown-title">Intro to Web Development</p>
                     </div>
                     <div class="col-md-1">
                         <img src="../images/downArrowWhite.png" id="arrow2">
@@ -118,15 +118,15 @@
         <div class="row main-bg" id="program2-info">
             <div class="col-md-2"></div>
             <div class="col-md-6 program-bg">
-                <p class="program-title">Intro to Coding, Python</p>
-                <p class="program-subheading">Spring 2022</p>
-                <p class="program-subheading">Led by DTech, In partnership with Journey House</p>
+                <p class="program-title">Intro to Web Development</p>
+                <p class="program-subheading">Summer 2022</p>
+                <p class="program-subheading">Led by DTech, In partnership with MSOE</p>
                 <p class="program-description">
-                    Who: 7th-8th graders, identify as a girl, no programming experience required<br>
-                    When: May 21-22, 9am-4pm<br>
-                    Where: Journey House, Milwaukee<br>
-                    What: In this two day bootcamp, students will learn the basics of coding in Python. They will learn about algorithms, variables, conditionals, loops, and functions. The students will work on mini-projects to practice these concepts. The program will end with a gallery walk so that everyone can share what they learned.<br>
-                    Lunch, snacks, t-shirts, and mini-prizes will be provided!<br>
+                    Who: 6th-8th graders, identify as a girl, no programming experience required<br>
+                    When: July 12-14, 1pm-5pm<br>
+                    Where: Milwaukee School of Engineering<br>
+                    What: In this three day program, students will learn the basics of web development. They will learn how to code in HTML, CSS, and JavaScript. The students will work on a mini-project to practice these concepts. The program will end with a gallery walk so that everyone can share what they learned.<br>
+                    Snacks, t-shirts, and mini-prizes will be provided!<br>
                 </p>
                 <a href="#" class="link register">REGISTER NOW</a>
             </div>
@@ -139,7 +139,7 @@
             <div class="col-md-8 program-dropdown" id="program3">
                 <div class="row">
                     <div class="col-md-11">
-                        <p class="dropdown-title">Intro to Coding, Python</p>
+                        <p class="dropdown-title">Robocode Programming</p>
                     </div>
                     <div class="col-md-1">
                         <img src="../images/downArrowWhite.png" id="arrow3">
@@ -150,15 +150,15 @@
         <div class="row main-bg" id="program3-info">
             <div class="col-md-2"></div>
             <div class="col-md-6 program-bg">
-                <p class="program-title">Intro to Coding, Python</p>
-                <p class="program-subheading">Spring 2022</p>
-                <p class="program-subheading">Led by DTech, In partnership with Journey House</p>
+                <p class="program-title">Robocode Programming</p>
+                <p class="program-subheading">Summer 2022</p>
+                <p class="program-subheading">Led by DTech, In partnership with MSOE</p>
                 <p class="program-description">
                     Who: 7th-8th graders, identify as a girl, no programming experience required<br>
-                    When: May 21-22, 9am-4pm<br>
-                    Where: Journey House, Milwaukee<br>
-                    What: In this two day bootcamp, students will learn the basics of coding in Python. They will learn about algorithms, variables, conditionals, loops, and functions. The students will work on mini-projects to practice these concepts. The program will end with a gallery walk so that everyone can share what they learned.<br>
-                    Lunch, snacks, t-shirts, and mini-prizes will be provided!<br>
+                    When: June 27-30, 4:30pm-6:30pm<br>
+                    Where: Milwaukee School of Engineering<br>
+                    What: In this four day program, students will learn ...<br>
+                    Snacks, t-shirts, and mini-prizes will be provided!<br>
                 </p>
                 <a href="#" class="link register">REGISTER NOW</a>
             </div>
