home page down arrow added

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
         <div class="row motto1-bg">
             <div class="col-md-5"></div>
             <div class="col-md-2">
-                <!-- Add down arrow here -->
+                <a href="#arrow-link"><img src="images/downArrow.png" id="down-arrow"></a>
             </div>
         </div>
-        <div class="row break-pt"></div>
+        <div class="row break-pt" id="arrow-link"></div>
         <div class="row upcoming-bg">
             <div class="col-md-2"></div>
             <div class="col-md-3 upcoming1-bg">
