Alyshba's bio added

--- a/pages/boardMembers.html
+++ b/pages/boardMembers.html
@@ -133,12 +133,12 @@
             <div class="col-md-5">
                 <p class="position">Secretary, Designer</p>
                 <p class="bio">
-                    Tania Mishra is a current Senior in high school and the creator of DTech. Tania has been interested in technology and computer science since her first digital exploration class in 6th grade. She completed two levels of Girls Who Code and participated in multiple workshops focused on empowering and inspiring girls in technology. She has participated and won awards in ProjectCSGirls and Intel ISEF-affiliated science and engineering fairs. She is currently interning at Northwestern Mutual on Jay Walters' team. Tania wants to help lead more girls into the path of computer science. She has received a lot of guidance from teachers mentors at NM, and she wishes to pass it on to younger girls so that they can take advantage of every opportunity and continue to explore technology fields.
+                    Alyshba Sharwani is a senior at Brookfield Central High School whose interests include art, reading, writing, and volunteering. Her leadership experiences includes her experience as editor and business manager of the school newspaper, secretary of a diversity and inclusivity centered school club (MSA), and former team member of a Leukemia and Lymphoma Society student fundraising team. As a designer, she is influenced by her background in art. She has taken numerous art classes, including AP Art, and has won Scholastic Awards for her work. 
                 </p>
                 <a href="#" target="_blank" class="link">Connect with Alyshba on LinkedIn</a>
             </div>
             <div class="col-md-3">
-                <img src="../images/logo.png" class="profile-pic">
+                <img src="../images/profilePics/alyshba.jpg" class="profile-pic">
             </div>
         </div>
         
