partners descriptions updated

--- a/pages/partners.html
+++ b/pages/partners.html
@@ -74,7 +74,7 @@
             <div class="col-md-2"></div>
             <div class="col-md-4">
                 <p class="description">
-                    The Milwaukee School of Engineering is a partner of numerous DTech programs. MSOE is a private, non-profit university located in Milwaukee, WI. MSOE offers bachelor's and master's degrees in top-ranked engineering, business, and nursing programs. MSOE supports a variety of STEM and community programs, as well as programs specifically geared towards high schoolers.
+                    The Milwaukee School of Engineering partners with DTech programs through their STEM outreach team and the We Energies STEM Center at MSOE.  Located in Milwaukee, WI, MSOE offers bachelor’s and master’s degrees in top-ranked engineering, business and nursing programs. MSOE offers year round STEM outreach programs for K-12 students and educators.
                 </p>
                 <a href="https://www.msoe.edu/" target="_blank" class="link" class="website-link">LEARN MORE ABOUT MSOE</a>
             </div>
@@ -92,7 +92,8 @@
             <div class="col-md-2"></div>
             <div class="col-md-4">
                 <p class="description">
-                    The Milwaukee School of Engineering is a partner of numerous DTech programs. MSOE is a private, non-profit university located in Milwaukee, WI. MSOE offers bachelor's and master's degrees in top-ranked engineering, business, and nursing programs. MSOE supports a variety of STEM and community programs, as well as programs specifically geared towards high schoolers.
+                    Journey House's mission is to empower families of Southside Milwaukee to move out of poverty by offering Adult Education, Youth Development, THRIVE Workforce Development, and Family Engagement.
+                    Their vision is that every individual and family in Clarke Square will be given the tools and resources to succeed and contribute personally, professionally, and civically to the neighborhood and our greater Milwaukee community.
                 </p>
                 <a href="http://www.journeyhouse.org/" target="_blank" class="link" class="website-link">LEARN MORE ABOUT JOURNEY HOUSE</a>
             </div>
