all pages done except upcoming programs

--- a/pages/boardMembers.html
+++ b/pages/boardMembers.html
@@ -135,7 +135,7 @@
                 <p class="bio">
                     Alyshba Sharwani is a senior at Brookfield Central High School whose interests include art, reading, writing, and volunteering. Her leadership experiences includes her experience as editor and business manager of the school newspaper, secretary of a diversity and inclusivity centered school club (MSA), and former team member of a Leukemia and Lymphoma Society student fundraising team. As a designer, she is influenced by her background in art. She has taken numerous art classes, including AP Art, and has won Scholastic Awards for her work. 
                 </p>
-                <a href="#" target="_blank" class="link">Connect with Alyshba on LinkedIn</a>
+                <!-- <a href="#" target="_blank" class="link">Connect with Alyshba on LinkedIn</a> -->
             </div>
             <div class="col-md-3">
                 <img src="../images/profilePics/alyshba.jpg" class="profile-pic">
