--- a/pages/partners.html
+++ b/pages/partners.html
@@ -79,7 +79,7 @@
                 <a href="https://www.msoe.edu/" target="_blank" class="link" class="website-link">LEARN MORE ABOUT MSOE</a>
             </div>
             <div class="col-md-4">
-                <img src="../images/msoe.jpeg" class="picture">
+                <img src="../images/msoe.jpg" class="picture">
             </div>
         </div>
         <div class="row main-bg">
@@ -98,7 +98,7 @@
                 <a href="http://www.journeyhouse.org/" target="_blank" class="link" class="website-link">LEARN MORE ABOUT JOURNEY HOUSE</a>
             </div>
             <div class="col-md-4">
-                <img src="../images/journeyHouse.jpeg" class="picture">
+                <img src="../images/journeyHouse.jpg" class="picture">
             </div>
         </div>
         
