--- a/pages/volunteers.html
+++ b/pages/volunteers.html
@@ -92,8 +92,8 @@
                 <p class="name">Harshman Sihra</p> -->
             </div>
             <div class="col-md-2">
-                <img src="../images/profilePics/tania.JPG" class="picture">
-                <p class="name">Monica Price</p>
+                <!-- <img src="../images/profilePics/tania.JPG" class="picture">
+                <p class="name">Monica Price</p> -->
             </div>
             <div class="col-md-2">
                 <!-- <img src="../images/profilePics/tania.JPG" class="picture">
@@ -103,7 +103,7 @@
         <div class="row main-bg">
             <div class="col-md-2"></div>
             <div class="col-md-8">
-                <p id="special-thanks">Special thanks to Elizabeth Taylor, MSOE's Outreach Coordinator!</p>
+                <p id="special-thanks">Special thanks to Elizabeth Taylor, MSOE's Director of STEM!</p>
             </div>
         </div>
         
