--- a/index.html
+++ b/index.html
@@ -67,8 +67,13 @@
         <div class="row motto1-bg">
             <div class="col-md-2"></div>
             <div class="col-md-8">
-                <p id="flower-motto">- From This STEM, A Flower Blooms -</p>
-                <p id="motto-subheading">- DTech Motto</p>
+                <p id="flower-motto">~ From This STEM, A Flower Blooms ~</p>
+            </div>
+        </div>
+        <div class="row motto1-bg">
+            <div class="col-md-5"></div>
+            <div class="col-md-2">
+                <img src="images/flowerDivider.png" id="flower-divider">
             </div>
         </div>
         <div class="row motto2-bg">
