--- a/pages/upcomingPrograms.html
+++ b/pages/upcomingPrograms.html
@@ -90,13 +90,13 @@
                 <p class="program-subheading">Spring 2022</p>
                 <p class="program-subheading">Led by DTech, In partnership with Journey House</p>
                 <p class="program-description">
-                    Who: 7th-8th graders, identify as a girl, no programming experience required<br>
-                    When: May 21-22, 9am-4pm<br>
-                    Where: Journey House, Milwaukee<br>
-                    What: In this two day bootcamp, students will learn the basics of coding in Python. They will learn about algorithms, variables, conditionals, loops, and functions. The students will work on mini-projects to practice these concepts. The program will end with a gallery walk so that everyone can share what they learned.<br>
+                    <b>Who:</b> Journey House community ONLY, 7th-8th graders, identify as a girl, no programming experience required<br>
+                    <b>When:</b> May 21-22, 9am-4pm<br>
+                    <b>Where:</b> Journey House, Milwaukee<br>
+                    <b>What:</b> In this two day bootcamp, students will learn the basics of coding in Python. They will learn about algorithms, variables, conditionals, loops, and functions. The students will work on mini-projects to practice these concepts. The program will end with a gallery walk so that everyone can share what they learned.<br>
                     Lunch, snacks, t-shirts, and mini-prizes will be provided!<br>
                 </p>
-                <a href="#" class="link register">REGISTER NOW</a>
+                <a href="https://forms.gle/q7dMoEnRUhaihP4v5" class="link register">REGISTER NOW</a>
             </div>
             <div class="col-md-2 program-bg">
                 <!-- Add flyer picture here -->
@@ -122,13 +122,13 @@
                 <p class="program-subheading">Summer 2022</p>
                 <p class="program-subheading">Led by DTech, In partnership with MSOE</p>
                 <p class="program-description">
-                    Who: 6th-8th graders, identify as a girl, no programming experience required<br>
-                    When: July 12-14, 1pm-5pm<br>
-                    Where: Milwaukee School of Engineering<br>
-                    What: In this three day program, students will learn the basics of web development. They will learn how to code in HTML, CSS, and JavaScript. The students will work on a mini-project to practice these concepts. The program will end with a gallery walk so that everyone can share what they learned.<br>
+                    <b>Who:</b> 6th-8th graders, identify as a girl, no programming experience required<br>
+                    <b>When:</b> July 12-14, 1pm-5pm<br>
+                    <b>Where:</b> Milwaukee School of Engineering<br>
+                    <b>What:</b> In this three day program, students will learn the basics of web development. They will learn how to code in HTML, CSS, and JavaScript. The students will work on a mini-project to practice these concepts. The program will end with a gallery walk so that everyone can share what they learned.<br>
                     Snacks, t-shirts, and mini-prizes will be provided!<br>
                 </p>
-                <a href="#" class="link register">REGISTER NOW</a>
+                <a href="#" class="link register">Registration will be opened in April.</a>
             </div>
             <div class="col-md-2 program-bg">
                 <!-- Add flyer picture here -->
@@ -154,13 +154,13 @@
                 <p class="program-subheading">Summer 2022</p>
                 <p class="program-subheading">Led by DTech, In partnership with MSOE</p>
                 <p class="program-description">
-                    Who: 7th-8th graders, identify as a girl, no programming experience required<br>
-                    When: June 27-30, 4:30pm-6:30pm<br>
-                    Where: Milwaukee School of Engineering<br>
-                    What: In this four day program, students will learn ...<br>
+                    <b>Who:</b> 7th-8th graders, identify as a girl, no programming experience required<br>
+                    <b>When:</b> June 27-30, 4:30pm-6:30pm<br>
+                    <b>Where:</b> Milwaukee School of Engineering<br>
+                    <b>What:</b> Description will be released soon! Check back around April!<br>
                     Snacks, t-shirts, and mini-prizes will be provided!<br>
                 </p>
-                <a href="#" class="link register">REGISTER NOW</a>
+                <a href="#" class="link register">Registration will be opened in April.</a>
             </div>
             <div class="col-md-2 program-bg">
                 <!-- Add flyer picture here -->
