--- a/pages/upcomingPrograms.html
+++ b/pages/upcomingPrograms.html
@@ -96,7 +96,7 @@
                     <b>What:</b> In this two day bootcamp, students will learn the basics of coding in Python. They will learn about algorithms, variables, conditionals, loops, and functions. The students will work on mini-projects to practice these concepts. The program will end with a gallery walk so that everyone can share what they learned.<br>
                     Lunch, snacks, t-shirts, and mini-prizes will be provided!<br>
                 </p>
-                <a href="https://forms.gle/q7dMoEnRUhaihP4v5" class="link register">REGISTER NOW</a>
+                <a href="https://forms.gle/q7dMoEnRUhaihP4v5" target="_blank" class="link register">REGISTER NOW</a>
             </div>
             <div class="col-md-2 program-bg">
                 <!-- Add flyer picture here -->
@@ -128,7 +128,7 @@
                     <b>What:</b> In this three day program, students will learn the basics of web development. They will learn how to code in HTML, CSS, and JavaScript. The students will work on a mini-project to practice these concepts. The program will end with a gallery walk so that everyone can share what they learned.<br>
                     Snacks, t-shirts, and mini-prizes will be provided!<br>
                 </p>
-                <a href="#" class="link register">Registration will be opened in April.</a>
+                <a href="#" target="_blank" class="link register">Registration will be opened in April.</a>
             </div>
             <div class="col-md-2 program-bg">
                 <!-- Add flyer picture here -->
@@ -160,7 +160,7 @@
                     <b>What:</b> Description will be released soon! Check back around April!<br>
                     Snacks, t-shirts, and mini-prizes will be provided!<br>
                 </p>
-                <a href="#" class="link register">Registration will be opened in April.</a>
+                <a href="#" target="_blank" class="link register">Registration will be opened in April.</a>
             </div>
             <div class="col-md-2 program-bg">
                 <!-- Add flyer picture here -->
