updating upcoming programs

--- a/pages/upcomingPrograms.html
+++ b/pages/upcomingPrograms.html
@@ -96,7 +96,7 @@
                     <b>What:</b> In this two day bootcamp, students will learn the basics of coding in Python. They will learn about algorithms, variables, conditionals, loops, and functions. The students will work on mini-projects to practice these concepts. The program will end with a gallery walk so that everyone can share what they learned.<br>
                     Lunch, snacks, t-shirts, and mini-prizes will be provided!<br>
                 </p>
-                <a href="https://forms.gle/q7dMoEnRUhaihP4v5" target="_blank" class="link register">REGISTER NOW</a>
+                <a href="https://forms.gle/q7dMoEnRUhaihP4v5" target="_blank" class="link register">REGISTER NOW!</a>
             </div>
             <div class="col-md-2 program-bg">
                 <!-- Add flyer picture here -->
@@ -122,13 +122,14 @@
                 <p class="program-subheading">Summer 2022</p>
                 <p class="program-subheading">Led by DTech, In partnership with MSOE</p>
                 <p class="program-description">
-                    <b>Who:</b> 6th-8th graders, identify as a girl, no programming experience required<br>
-                    <b>When:</b> July 12-14, 1pm-5pm<br>
+                    <b>Who:</b> Incoming 7th-9th graders, identify as a girl, no programming experience required<br>
+                    <b>When:</b> June 27-30, 4:30pm-6:30pm<br>
                     <b>Where:</b> Milwaukee School of Engineering<br>
-                    <b>What:</b> In this three day program, students will learn the basics of web development. They will learn how to code in HTML, CSS, and JavaScript. The students will work on a mini-project to practice these concepts. The program will end with a gallery walk so that everyone can share what they learned.<br>
+                    <b>What:</b> In this 4-day program, students will learn the basics of web development. They will learn how to code in HTML, CSS, and JavaScript. The students will work on a mini-project to practice these concepts. The program will end with a gallery walk so that everyone can share what they learned.<br>
                     Snacks, t-shirts, and mini-prizes will be provided!<br>
+                    A program fee of $15 is required to register.<br>
                 </p>
-                <a href="#" target="_blank" class="link register">Registration will be opened in April.</a>
+                <a href="https://forms.gle/8MA8z2kTyXwdPsZbA" target="_blank" class="link register">REGISTER NOW!</a>
             </div>
             <div class="col-md-2 program-bg">
                 <!-- Add flyer picture here -->
@@ -154,13 +155,14 @@
                 <p class="program-subheading">Summer 2022</p>
                 <p class="program-subheading">Led by DTech, In partnership with MSOE</p>
                 <p class="program-description">
-                    <b>Who:</b> 7th-8th graders, identify as a girl, no programming experience required<br>
-                    <b>When:</b> June 27-30, 4:30pm-6:30pm<br>
+                    <b>Who:</b> Incoming 7th-8th graders, identify as a girl, no programming experience required<br>
+                    <b>When:</b> July 12-14, 1pm-5pm<br>
                     <b>Where:</b> Milwaukee School of Engineering<br>
-                    <b>What:</b> Description will be released soon! Check back around April!<br>
+                    <b>What:</b> In this 3-day program, students will learn to program in Java using the robocode library. By the end of the program, they will be able to program a virtual robot for a competition.<br>
                     Snacks, t-shirts, and mini-prizes will be provided!<br>
+                    A program fee of $15 is required to register.<br>
                 </p>
-                <a href="#" target="_blank" class="link register">Registration will be opened in April.</a>
+                <a href="https://forms.gle/NdWxYF8t6t9euCmX7" target="_blank" class="link register">REGISTER NOW!</a>
             </div>
             <div class="col-md-2 program-bg">
                 <!-- Add flyer picture here -->
