final changes before python program

--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
         <div class="row upcoming-bg">
             <div class="col-md-2"></div>
             <div class="col-md-4 program1-bg">
-                <p class="program-date">21 May</p>
+                <p class="program-date">28 May</p>
                 <p class="program-title">Introduction to Python</p>
                 <a href="pages/upcomingPrograms.html#page-title"><img src="images/rightArrow.png" class="program-arrow"></a>
             </div>
             <div class="col-md-4 program2-bg">
                 <p class="program-date">27 June</p>
-                <p class="program-title">Robo Code</p>
+                <p class="program-title">Introduction to Web Development</p>
                 <a href="pages/upcomingPrograms.html#page-title"><img src="images/rightArrow.png" class="program-arrow"></a>
             </div>
         </div>
